--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
   
 {
     "fortnite": {
-        "email": [],
+        "email": "comi061q@gmail.com",
         "owner": [],
         "platform": "WIN",
         "outfit": "CID_429_Athena_Commando_F_NeonLines",
